[package]
name = "projeto-ares"
version = "0.1.0"
authors = ["Thiago Barbosa <thiagolsk8@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "projeto-ares"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-hal = "0.45"
anyhow = "1"
dht-sensor = "0.2.1"
embedded-graphics = "0.8.1"
ssd1306 = "0.9.0"

# --- O pulo do gato: versão 0.51 tem a correção do u8/i8 ---
esp-idf-svc = { version = "0.51", features = ["alloc", "native"] }
embedded-svc = "0.28"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }