[package]
name = "projeto-ares"
version = "0.1.0"
authors = ["Thiago Barbosa <thiagolsk8@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "projeto-ares"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

# ... (mantenha a parte de cima do seu arquivo igual) ...

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
embedded-graphics = "0.8"
ssd1306 = "0.8"
dht-sensor = "0.2"

# O NOVO TRIO DE FERRO (Suporte nativo ao Python 3.12)
esp-idf-sys = { version = "0.36", features = ["binstart"] }
esp-idf-svc = "0.50"
esp-idf-hal = "0.45"
embedded-svc = "0.28"

[build-dependencies]
embuild = { version = "0.32", features = ["espidf"] }

[package.metadata.esp-idf-sys]
esp_idf_version = "v5.3"